test/setup.ts
// Jest setup file
// Global test configuration and mocks

// Mock console methods in tests to reduce noise
// global.console = {
//   ...console,
//   // Uncomment to suppress specific console methods during tests
//   // log: jest.fn(),
//   // warn: jest.fn(),
//   // error: jest.fn(),
// };

// Set test timeout
jest.setTimeout(30000);
